compiler/tools/fpp-check/test/state_machine/typed_elements/choice_u32_bool.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/choice_u32_bool.fpp:8.5
    choice J { if g enter T else enter T }
    ^
error: type mismatch at junction
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/choice_u32_bool.fpp:9.5
    on s1 enter J
    ^
type of transition is U32
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/choice_u32_bool.fpp:10.5
    on s2 enter J
    ^
type of transition is bool
